--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -158,6 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="98dp"
         android:backgroundTint="#ff00ddff"
         android:onClick="modulus"
@@ -172,8 +173,7 @@
         android:id="@+id/button14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="98dp"
         android:backgroundTint="#ff00ddff"
         android:onClick="factorial"
@@ -236,9 +236,9 @@
         android:id="@+id/button18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="99dp"
         android:background="#ff00ddff"
         android:onClick="squareroot"
@@ -270,9 +270,10 @@
         android:id="@+id/button20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="98dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="96dp"
         android:background="#ff00ddff"
         android:text="@string/c_root"
         android:visibility="visible"
@@ -288,10 +289,11 @@
         android:layout_marginTop="66dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="14dp"
+        android:autofillHints=""
         android:background="@android:color/background_light"
         android:ems="10"
         android:hint="@string/start"
-        android:inputType="numberSigned|numberDecimal"
+        android:inputType="numberDecimal"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         android:textAlignment="center"
@@ -301,7 +303,7 @@
         app:layout_constraintEnd_toStartOf="@+id/editText2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" tools:targetApi="o"/>
+        tools:targetApi="o" />
 
     <Button
         android:id="@+id/button25"
@@ -375,15 +377,15 @@
         android:background="@android:color/background_light"
         android:ems="10"
         android:hint="@string/second_operand"
-        android:inputType="numberDecimal|numberPassword"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button29"
